# ochra

./: .gitignore  LICENSE  Makefile  mkdocs.yml  pyproject.toml
docs/: oo.md  transforms.md
docs/api/: core.md  functions.md  geometry.md  util.md
docs/stylesheets/: extra.css
src/ochra/: __init__.py  arrowhead.py  bezier.py  canvas.py  conic.py  core.py  dot.py  element.py  exception.py  functions.py  geometry.py  graph.py  group.py  image.py  line.py  mark.py  marker.py  markers.py  palettes.py  parameterizable.py  parametric.py  plane.py  poly.py  rect.py  segment.py  shape.py  style.py  svg.py  table.py  text.py  util.py
src/ochra/plot/: __init__.py  axis.py  bar_plot.py  chart.py  chartarea.py  collections.py  heatmap.py  histogram.py  line_plot.py  plot.py  scatter_plot.py  stack_plot.py  transform.py  typedef.py
src/ochra/rendering/: svg.py
src/ochra/resource/: _matplotlib_colormaps.py
src/ochra/style/: __init__.py  arrowhead.py  color.py  fill.py  font.py  markers.py  palette.py  stroke.py
src/ochra/util/: cairo_utils.py  functions.py  property_utils.py
tests/ochra/: t.py  t_arrow.py  t_cars.py  t_ellipsis.py  t_heatmap.py  t_line.py  t_markers.py  t_sinewaves.py  t_text.py  test_aabb.py  test_common.py  test_geometry.py  test_implicit.py  test_intersection.py  test_rasterization.py
