[tool.poetry]
name = "ochra"
version = "0.1.0"
description = "Declarative, composable, & stateless drawing"
authors = ["Tongfei Chen <tongfei@pm.me>"]
readme = "README.md"
repository = "https://github.com/ctongfei/ochra"
packages = [{ include = "ochra", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
pycairo = "^1.26.0"
jax = "^0.4.34"
jax-dataclasses = "^1.6.1"

[tool.poetry.group.test.dependencies]
vega-datasets = "^0.9.0"
pytest = "^6.2.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"

[tool.ruff]
ignore = ["E731", "E741"]
