[project]
name = "ochra"
version = "0.1.0"
description = "Declarative, composable, & stateless drawing"
authors = ["Tongfei Chen <tongfei@pm.me>"]
readme = "README.md"
repository = "https://github.com/ctongfei/ochra"
packages = [{ include = "ochra", from = "src" }]
requires-python = ">= 3.12"
dependencies = [
    "jax == 0.4.35",
    "jax-dataclasses == 1.6.1",
    "multimethod>=1.12",
    "pycairo == 1.27.0",
]

[dependency-groups]
dev = [
    "ruff == 0.6.9",
    "pyright == 1.1.386",
    "pip>=24.3.1",
    "vega-datasets == 0.9.0",
    "pytest == 8.3.3",
    "hypothesis >= 6.115.6",
    "mypy>=1.13.0",
]

[tool.ruff.lint]
ignore = ["E731", "E741"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--color=yes"
