[project]
name = "ochra"
version = "0.1.0"
description = "Declarative, composable, & stateless drawing"
authors = ["Tongfei Chen <tongfei@pm.me>"]
readme = "README.md"
repository = "https://github.com/ctongfei/ochra"
packages = [{ include = "ochra", from = "src" }]
requires-python = ">= 3.13"
dependencies = [
    "jax>=0.7",
    "jaxtyping>=0.3",
    "pycairo>=1.27",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pyright>=1.1.400",
    "pip>=25.1",
    "vega-datasets==0.9.0",
    "pytest==8.3.3",
    "hypothesis>=6.115.6",
    "mkdocs-material>=9.3.1",
    "sphinx>=8.2.3",
    "mkdocstrings-python>=1.17.0",
    "pymdown-extensions>=10.16.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E731",
    "E741",
    "F405",
    "F722",  # In jaxtyping, a shape annotation is a string in a type parameter position
    "F821",  # In jaxtyping, a shape annotation is a string in a type parameter position
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--color=yes"
